<resources>
    <string name="app_name">AgroSoft</string>
    <string name="clima">Clima</string>
    <string name="ingrese_el_cultivo">Ingrese el cultivo</string>
    <string name="mostrar">Mostrar</string>
    <string name="title_activity_home">home</string>
    <string name="cultivos">Cultivos</string>
    <string name="comunidad">Comunidad</string>
    <string name="noticias">Noticias</string>
    <string name="insumos">Insumos</string>
    <string name="r_nutricionales">R. Nutricionales</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="qui_nes_somos">¿Quiénes somos?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
